# aimigrate

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  poetry.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pr_agent.yml  publish_pypi.yml
aimigrate/: __init__.py  chat.py  code.py  embeddings.py  files.py  migrate_core.py  migrate_diff.py  migrate_oob.py  migrate_repo.py  migration.py  migration_subset.py  paths.py  utils.py  version.py
autoapi/aimigrate/: index.html
autoapi/aimigrate/chat/: index.html
autoapi/aimigrate/code/: index.html
autoapi/aimigrate/files/: index.html
autoapi/aimigrate/migrate_core/: index.html
autoapi/aimigrate/migrate_diff/: index.html
autoapi/aimigrate/migrate_oob/: index.html
autoapi/aimigrate/migrate_repo/: index.html
autoapi/aimigrate/migration/: index.html
autoapi/aimigrate/paths/: index.html
autoapi/aimigrate/utils/: index.html
autoapi/aimigrate/version/: index.html
autoapi/summary/: index.html
data/zombiesim/: README.md  p_zombiesim.diff  simulate_zombies_ref.py  zombiesim.diff
docs/: README.md  deploy  index.md  readme.md  requirements.txt  serve
llmmigrate/: __init__.py  chat.py  files.py  migration.py  migration_subset.py  utils.py
playpen/basic/: google.py  simple_json.py  simple_query.py
playpen/diff_main_code/: README.md  process_similarities.py  process_trials.py  simulate_zombies.py  trial_A.py  trial_B.py
playpen/similarities/: calculate_similarities.py  match_methods.py
search/: search_index.json
starsim_ai/: README.md  __init__.py  chat.py  code.py  embeddings.py  files.py  migration.py  migration_subset.py  paths.py  utils.py
tests/: test_chat.py
tests/devtests/: test_starsim.py
tests/devtests/source/: zombie.py
typhoid/: README.md  migrate.py
