[project]
name = "aimigrate"
version = "0.1.0"
description = "AI tool for migrating code"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Starsim Development Team", email = "info@starsim.org" },
  { name = "Cliff Kerr" },
  { name = "Katherine Rosenfeld" },
  { name = "Jessica Lundin" },
]
dependencies = [
    "aisuite[anthropic,google,ollama,openai]>=0.1.3",
    "sciris>=3.2.0",
    "tiktoken>=0.8.0",
]

[build-system]
requires = ["flit-core>=3.7"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "gitpython>=3.1.44",
    "pytest>=8.3.4",
]
