[project]
name = "aimigrate"
version = "0.2.1"
description = "AI tool for migrating code"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Starsim Development Team", email = "info@starsim.org" },
  { name = "Cliff Kerr" },
  { name = "Katherine Rosenfeld" },
  { name = "Jessica Lundin" },
]
dependencies = [
    "aisuite[anthropic,google,ollama,openai]>=0.1.3",
    "sciris>=3.2.0",
    "tiktoken>=0.8.0",
]

[build-system]
requires = ["flit-core>=3.7"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "gitpython>=3.1.44",
    "pytest>=8.3.4",
]

[tool.bumpversion]
current_version = "0.2.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "aimigrate/version.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = 'aimigrate/version.py'
search = "__versiondate__ = '\\d{{4}}-\\d{{2}}-\\d{{2}}'"
replace = "__versiondate__ = '{now:%Y-%m-%d}'"
regex = true